--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,42 @@ header, main, footer, nav, aside, section, article  {
 }
 
 body {
-    font-family: 'Mulish', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Mulish';
     width: 100%;
-}
-
-a {
-    text-decoration: none;
 }
 
 #wrapper {
     margin: 25px;
 }
 
-#content-wrapper {
+#main-wrapper {
+    margin-top: 78px;
+}
+
+.h1-wrapper {
+    width: 1121px;
+    height: 54px;
+    margin-top: 73px;
+}
+
+.h1-wrapper > #h-decoration {
+    float: left;
+    position: relative;
+    z-index: 1;
+    width: 38.17px;
+    height: 41.3px;
+}
+
+.clear {
+    clear: both;
+}
+
+.h1-wrapper#home-h1-extra-margin {
     margin-top: 78px;
 }
 
 h2 {
-    font-style: normal;
+    /* font-style: normal; */
     font-weight: 700;
     font-size: 36px;
     line-height: 56px;
@@ -69,8 +87,6 @@ nav {
 }
 
 #top-nav a {
-    font-family: 'Mulish';
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 23px;
@@ -92,12 +108,10 @@ nav {
 #cover-photo {
     margin-top: 14px;
     width: 560.46px;
-    height: 475;
+    /* height: 475; */
 }
 
 #footer-nav a {
-    font-family: 'Mulish';
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 60px;
@@ -114,9 +128,7 @@ nav {
     margin-right: 30px;
 }
 
-#discover-section p {
-    font-family: 'Mulish';
-    font-style: normal;
+#main-section p {
     font-weight: 300;
     font-size: 21px;
     line-height: 32px;
@@ -125,11 +137,11 @@ nav {
     mix-blend-mode: normal;
 }
 
-#consult-button {
+#filled-button {
     background-color: #458FF6;
 }
 
-#learn-button {
+#unfilled-button {
     background-color: white;
     border: 1.4px solid;
     color: #458FF6;
@@ -154,7 +166,7 @@ nav {
     background: #FFFFFF;
 }
 
-.dana-button {
+.custom-button {
     width: 200px;
     height: 56px;
     border-color: #458FF6;
@@ -166,39 +178,13 @@ nav {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-top: 4px;
+    margin-left: 1px;
     cursor: pointer;
 }
 
 #services-section {
     margin-top: 60px;
-}
-
-#services-section ul {
-    list-style: none;
-}
-
-#services-section ul li {
-    height: 54px;
-}
-
-#services-section ul li:not(:last-child) {
-    margin-bottom: 30px;
-}
-
-#services-section ul li:first-child {
-    margin-top: 8px;
-}
-
-#services-section ul li span {
-    margin-left: 29px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    color: #000000;  
 }
 
 .services-flex-wrapper {
@@ -223,8 +209,6 @@ nav {
     padding-top: 47px;
     padding-bottom: 47px;
 
-    font-family: 'Mulish';
-    font-style: normal;
     font-weight: 300;
     font-size: 16px;
     line-height: 28px;
@@ -237,21 +221,16 @@ nav {
 }
 
 .services-flex-wrapper > a > .services-flex-content > h3 {
-    margin-top: 22px;
-
-    font-family: 'Mulish';
-    font-style: bold;
     font-weight: 700;
     font-size: 24px;
     line-height: 56px;
-
+    margin-top: 22px;
+    
     color: #000000;
     mix-blend-mode: normal;
 }
 
 .services-flex-wrapper > a > .services-flex-content > p {
-    font-family: 'Mulish';
-    font-style: normal;
     font-weight: 300;
     font-size: 16px;
     line-height: 28px;
@@ -266,9 +245,7 @@ nav {
     height: 90px;
 }
 
-#content-p {
-    font-family: 'Mulish';
-    font-style: normal;
+#main-section-p {
     font-weight: 300;
     font-size: 16px;
     line-height: 28px;
@@ -514,31 +491,9 @@ footer h6 {
     font-size: 42px;
     line-height: 53px;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     top: 5px;
     left: -15px;
 
     color: #1F1534;
-}
-
-.h1-wrapper {
-    width: 1121px;
-    height: 54px;
-    margin-top: 73px;
-}
-
-.h1-wrapper > #h-decoration {
-    float: left;
-    position: relative;
-    z-index: 2;
-    width: 38.17px;
-    height: 41.3px;
-}
-
-.clear {
-    clear: both;
-}
-
-.h1-wrapper#home-h1-wrapper {
-    margin-top: 78px;
 }
