--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ nav {
 }
 
 footer {
-    width: 100%;
+    width: 1599.02px;
     height: 425px;
     background: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
 }
